# Hot-Assets-Plus-Plus

./: CMakeLists.txt  README.md  library.h
hot_assets/: AssetManager.cpp  AssetManager.h  library.cpp
